[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/placeholder/wave.png" type="Texture" id=1]
[ext_resource path="res://code/wave.gd" type="Script" id=2]
[ext_resource path="res://code/billboard.gd" type="Script" id=3]
[ext_resource path="res://scenes/gameplay/sounds_splash.tres" type="Resource" id=4]

[sub_resource type="SphereShape" id=1]

[node name="wave" type="KinematicBody" groups=["waves"]]
transform = Transform( 1.5, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, 0, 0 )
collision_layer = 8
collision_mask = 6
script = ExtResource( 2 )
duration = 1.0
splash_sounds = ExtResource( 4 )

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform( 0.349, 0, 0, 0, 0.349, 0, 0, 0, 0.349, 0, 0, 0 )
centered = false
offset = Vector2( -256, 0 )
billboard = 2
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.987184, 0 )
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="Billboard" type="Node" parent="."]
script = ExtResource( 3 )

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
